--- a/src/View/List/add_list.html.twig
+++ b/src/View/List/add_list.html.twig
@@ -16,7 +16,7 @@
         <div class="add_list-container">
         <h3 class="add_list-title">Création de votre liste</h3>
         <div class="form-container">
-            <form class="form" action="/list" method="POST">
+            <form class="form" action="/items/add" method="POST">
                 <label for="name"><p class="name">Nom de la liste</p></label>
                 <input type="text" id="name" placeholder="Entrez le nom de la liste" name="name" required>
                 <label for="date"><p class="date">Date de l'évenement</p></label>
