--- a/src/View/Components/_lists.html.twig
+++ b/src/View/Components/_lists.html.twig
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 	<div class="card-footer">
-		<a href="">voir</a>
+		<a href="/list/share">voir</a>
 	</div>
 </div>
 <div class="card">
@@ -69,7 +69,7 @@
 		</div>
 	</div>
 	<div class="card-footer">
-		<a href="">voir</a>
+		<a href="/list/share">voir</a>
 	</div>
 </div>
 <div class="card">
@@ -98,6 +98,6 @@
 		</div>
 	</div>
 	<div class="card-footer">
-		<a href="">voir</a>
+		<a href="/list/share">voir</a>
 	</div>
 </div></div>
