--- a/src/View/List/add_list.html.twig
+++ b/src/View/List/add_list.html.twig
@@ -31,7 +31,7 @@
                     <option value="autre">Autre</option>
                 </select>
                 <label for="description"><p class="description">Description</p></label>
-                <input type="text" class="description" id="description" placeholder="Indiquez des informations sur votre liste" name="description" required>
+                <textarea class="description_area" id="description" placeholder="Indiquez des informations sur votre liste" name="description" required> </textarea>
                 <input type="submit" id='submit' value='Créer la liste' > 
             </form>
     </div>
