--- a/public/assets/css/add_list.css
+++ b/public/assets/css/add_list.css
@@ -177,16 +177,15 @@ input[type=submit]:hover {
         margin-right: auto;
     }
     
-    input[type=text].description {
+    .description_area {
         padding: 8px 20px;
         border: 1px solid #ccc;
         text-align: center;
-        align-content: center;
         border-radius: 11px;
-        margin-left: auto;
-        margin-right: auto;
         width: 30rem;
         height: 8rem;
+        margin-left: auto;
+        margin-right: auto;
         color: var(--font-color);
     }
     
