--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,18 +1,6 @@
 .login-background {
-
     background-image: url("/assets/images/login_bg.jpg");
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    z-index: -1;
 }
-
 
 /*MOBILE FIRST*/
 
@@ -41,6 +29,7 @@
     text-align: center;
     color: var(--primary-color);
 }
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -56,28 +45,36 @@ input[type=submit] {
     color: white;
     font-size: 15px;
     padding: 14px 20px;
-    margin: 15px 0;
-    margin-left: 25%;
     border: none;
     cursor: pointer;
-    width: 20vh;
+    margin: 1rem 5rem 1rem 5rem;
+    width: 15rem;
     border-radius: 11px;
 }
+
 input[type=submit]:hover {
     background-color: var(--background-color);
     color: var(--btn-color);
     border: 1px solid var(--btn-color);
 }
-.noaccount{
-    display: flex;
-    justify-content: center;
+
+.noaccount {
+    background-color: var(--btn-color);
+    width: 12rem;
+    margin: auto;
+    border-radius: 11px;
+    border: solid black 0.5px;
+    box-shadow: 2px 2px 4px black ;
+    text-align: center;
 }
-.noaccount-href{
+
+.noaccount-href {
     color: var(--primary-color);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
 }
-.show-password{
+
+.show-password {
     color: var(--background-color);
     font-size: 15px;
 }
@@ -93,7 +90,7 @@ input[type=submit]:hover {
         font-size: 40px;
     }
 
-    .form-container {
+    .form {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-evenly;
@@ -110,7 +107,7 @@ input[type=submit]:hover {
         text-align: center;
         color: var(--primary-color);
     }
-    
+
     input[type=text], input[type=password] {
         width: 100%;
         padding: 12px 20px;
@@ -131,24 +128,27 @@ input[type=submit]:hover {
         width: 30vh;
         border-radius: 11px;
     }
+
     input[type=submit]:hover {
         background-color: white;
         color: var(--btn-color);
         border: 1px solid var(--btn-color);
     }
-    .noaccount{
+
+    .noaccount {
         display: flex;
         justify-content: center;
     }
-    .noaccount-href{
+    
+    .noaccount-href {
         color: var(--primary-color);
         text-decoration: none;
-        font-size: 20px;
+        font-size: 16px;
     }
-    .show-password{
+
+    .show-password {
         color: var(--background-color);
         font-size: 15px;
         text-shadow: black 2px 2px;
     }
-
 }
