--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -3,53 +3,93 @@
     flex-direction: column;
     margin: 2px;
     gap: 20px;
-    background-color: white;
-    border-radius: 11px;
 }
 
 body {
-    background-color:cadetblue;
+    background-image: url("../images/pexels-lucie.jpg");
+    background-size: 1300px;
 }
 
 h3 {
-    text-align: center;  
+    text-align: center;
+    margin: 5px;
+    font-weight: 900;
+    font-size: 1,5rem;
 }
 
 .container-list {
-   box-shadow: 0 2px 5px;
+   box-shadow: 0 2px 5px var(--card-color);
    margin: 2px;
    border-radius: 11px; 
-   width: 33%;
+   height: 100%;
+   background-color: white;  
 }
 
-h1 {
+.titre {
     text-align: center;
+    background-color: transparent;
+    color: var(--primary-color);
+}
+
+p {
+    margin: 0;
+    padding: 1rem;
+    font-size: 1rem;
 }
 
 .container-sign_up {
-    box-shadow: 0 2px 5px;
+    box-shadow: 0 2px 5px var(--card-color);
     display: flex;
     flex-direction: column;
     border-radius: 11px;
-    width: 33%;
+    height: 100%;
+    background-color: white;
 }
 
 .container-youtube {
-    box-shadow: 0 2px 5px;
+    box-shadow: 0 2px 5px var(--card-color);
     background-color: white;
     border-radius: 11px;
-    width: 33%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .image-card {
-    height: 45%;
+    height: 40%;
     width: 100%;
-    border-radius: 11px;
+    border-top-left-radius: 11px;
+    border-top-right-radius: 11px;
 }
 
-@media screen and (min-width: 600px){
-    .container-card{
+.card {
+    margin-right: auto;
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-top: 2rem;
+    width: 20rem;
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--btn-color);
+    border-radius: 11px;
+    color: white;
+}
+
+@media screen and (min-width: 700px) {
+    .container-card {
         display: flex;
         flex-direction: row;
+    }
+}
+@media screen and (max-width:600px) {
+    .titre {
+        background-color:var( --background-color);
+        color: black;
     }
 }
