--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -10,28 +10,38 @@
 {% endblock %}
 
 {% block content %}
-<h1>Give me Gifts !</h1>
 <body> 
+<div class="container">
+<h1 class='titre'>Give me Gifts !</h1>
     <div class="container-card">
-        <div class= "container-list">
-            <img class ="image-card" src="/assets/images/pexels-anthony.jpg">
-            <h3>How it works !?<h3>
-            <br><p>Tired of useless gifts ? Your friends are useless when it comes the time to satistify you? Help them to please you with Gift Me 5!</p></br>
-        </div>
-        <div class= "container-sign_up">
-            <img class="image-card" src="/assets/images/pexels-karolina2.jpg">
-            <h3>Gift Me 5<h3>
-            <div class="container-para">
-                <p>You can create your own gift lists and share it with your relatives. Gifters can browse your list and gift you whatever they want.
-                    <br>Here is a video explaining the process.</br>
-                </p>
+        <div class ="card">
+            <div class= "container-list">
+                <img class ="image-card" src="/assets/images/pexels-laura.jpg">
+                <h3>Comment ça fonctionne? </h3>
+                <p>Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ? <br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
             </div>
-            <input type="submit" value="Sign up for free !"/>
         </div>
-        <div class= "container-youtube">
-            <img class="image-card" src="/assets/images/pexels-szabo.jpg">
-            <h3>Youtube<h3>
+        <div class ="card">
+            <div class= "container-sign_up">
+                <img class="image-card" src="/assets/images/pexels-karolina2.jpg">
+                <h3>Gift Me 5</h3>
+                <p>Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>
+                <a class="button" href="/login">
+                    <button class="button">Se connecter !</button>
+                </a>
+            </div>
+        </div>
+        <div class ="card">
+            <div class= "container-youtube">
+                <img class="image-card" src="/assets/images/pexels-szabo.jpg">
+                <h3>Youtube</h3>
+                <p>Vous pouvez retrouver une vidéo explicative du site Give me Gifts</p>
+                <a class="button" href="http://www.youtube.com">
+                    <button class="button">allez à</button>
+                </a>
+            </div>
         </div>
     </div>
+</div>
 </body>
 {% endblock %}
