--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -26,7 +26,7 @@
 				</label>
 				<input type="password" id="password" placeholder="Entrer votre mot de passe" name="password" required>
 				<label class="show-password" for="checkbox"><input type="checkbox" id="checkbox">Afficher le mot de passe</label>
-				<input type="submit" id='submit' value='Connexion'>
+				<input href="user" type="submit" id='submit' value='Connexion'>
 			</div>
 			<div class="noaccount">
 				<a class="noaccount-href" href="/signup">Créer un compte</a>
