--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -7,10 +7,12 @@
 {% block stylesheet %}
     <link rel="stylesheet" href="/assets/css/home.css">
     <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 {% endblock %}
 
 {% block content %}
-<body> 
+<body>
+<div class="main-background"></div>
 <div class="container">
 <h1 class='titre'>Give me Gifts !</h1>
     <div class="container-card">
@@ -18,14 +20,14 @@
             <div class= "container-list">
                 <img class ="image-card" src="/assets/images/pexels-laura.jpg">
                 <h3>Comment ça fonctionne? </h3>
-                <p>Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ? <br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
+                <p class="paragraphe">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ? <br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
             </div>
         </div>
         <div class ="card">
             <div class= "container-sign_up">
                 <img class="image-card" src="/assets/images/pexels-karolina2.jpg">
                 <h3>Gift Me 5</h3>
-                <p>Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>
+                <p class="paragraphe">Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>
                 <a class="button" href="/login">
                     <button class="button">Se connecter !</button>
                 </a>
@@ -35,7 +37,7 @@
             <div class= "container-youtube">
                 <img class="image-card" src="/assets/images/pexels-szabo.jpg">
                 <h3>Youtube</h3>
-                <p>Vous pouvez retrouver une vidéo explicative du site Give me Gifts</p>
+                <p class="paragraphe">Vous pouvez retrouver une vidéo explicative du site Give me Gifts</p>
                 <a class="button" href="http://www.youtube.com">
                     <button class="button">allez à</button>
                 </a>
