--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -1,6 +1,10 @@
 .main-background {
     background-image: url("/assets/images/login_bg.jpg");
+    background-size: cover;
+    z-index: -1;
+    position: absolute;
 }
+
 
 /*MOBILE FIRST*/
 
@@ -53,11 +57,13 @@
     display: flex;
     flex-flow: row wrap;
     justify-items: center;
-    width:100%;
+    width: 100%;
     margin-left: 1rem;
 }
 
-input[type=date], input[type=email], input[type=password] {
+input[type=date],
+input[type=email],
+input[type=password] {
     width: 21rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -102,59 +108,52 @@ input[type=submit]:hover {
     margin-top: 8rem;
 }
 
+
 /*END OF MOBILE FIRST*/
 
-/*DESKTOP FIRST*/
-@media only screen and (min-width: 920px) {
 
+/*DESKTOP FIRST*/
+
+@media only screen and (min-width: 920px) {
     .signup-title {
         text-align: center;
         background-color: transparent;
         color: var(--primary-color);
         font-size: 40px;
     }
-
     .firstname {
         color: var(--primary-color);
     }
-
     .lastname {
         color: var(--primary-color);
         margin-left: 8em;
     }
-
     .date {
         text-align: center;
         color: var(--primary-color);
     }
-
     .email {
         text-align: center;
         color: var(--primary-color);
     }
-
     .password {
         text-align: center;
         color: var(--primary-color);
     }
-
     .birthday {
         text-align: center;
         color: var(--primary-color);
     }
-
     .name {
         display: flex;
         flex-direction: row;
         justify-content: space-around
     }
-
     .input-name {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
     }
-
     .form {
         display: flex;
         flex-direction: column;
@@ -162,8 +161,9 @@ input[type=submit]:hover {
         width: 100%;
         margin: auto;
     }
-
-    input[type=date], input[type=email], input[type=password] {
+    input[type=date],
+    input[type=email],
+    input[type=password] {
         width: 30rem;
         padding: 12px 20px;
         border: 1px solid #ccc;
@@ -171,7 +171,6 @@ input[type=submit]:hover {
         margin-left: auto;
         margin-right: auto;
     }
-
     input[type=text] {
         width: 15rem;
         padding: 12px 10px;
@@ -180,7 +179,6 @@ input[type=submit]:hover {
         margin-left: auto;
         margin-right: auto;
     }
-
     input[type=submit] {
         background-color: var(--btn-color);
         color: var(--primary-color);
@@ -192,15 +190,13 @@ input[type=submit]:hover {
         width: 10rem;
         border-radius: 11px;
         border: solid black 0.5px;
-        box-shadow: 2px 2px 4px black ;
+        box-shadow: 2px 2px 4px black;
     }
-
     input[type=submit]:hover {
         background-color: var(--background-color);
         color: var(--btn-color);
         border: 1px solid var(--btn-color);
     }
-
     .show-password {
         color: var(--primary-color);
         font-size: 15px;
