insertArticle dans ArticleManager

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -23,6 +23,10 @@
     margin-right: 5vh;
 }
 
+.login-container {
+    text-align: center;
+}
+
 .user {
     text-align: center;
     color: var(--primary-color);
@@ -83,6 +87,8 @@ input[type=submit]:hover {
 .show-password {
     color: var(--background-color);
     font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
