modif login.css and login view + create login back check and call UserManager

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -110,7 +110,7 @@ input[type=submit]:hover {
         align-items: center;
         width: 20rem;
     }
-    .user {
+    .email {
         text-align: center;
         color: var(--primary-color);
     }
