--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -9,6 +9,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0
 		<a href="/">Accueil</a>
 		<a href="/list">Listes</a>
 		<a href="/login">Se connecter</a>
+		<a href="/logout">Se déconnecter</a>
 	</div>
 	<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
