--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -7,6 +7,7 @@
     --card-color: #007EA7;
     --btn-color: #E5383B;
     --font-color: #1B2F37;
+    --border: #d8d8d8;
 
     --event-color-1: #FFADAD;
     --event-color-2: #FFD6A5;
