--- a/src/View/Item/add.html.twig
+++ b/src/View/Item/add.html.twig
@@ -98,7 +98,7 @@
 			<div class="add-form">
 				<h1>Ajoute un cadeau</h1>
 				<div class="form-container">
-					<form class="form" action="items/add" method="POST">
+					<form class="form" action="" method="POST">
 						<label for="giftName">
 							<p class="giftName">Nom du cadeau</p>
 						</label>
