--- a/public/assets/css/items_add.css
+++ b/public/assets/css/items_add.css
@@ -4,7 +4,6 @@
     position: fixed;
 }
 
-
 /*MOBILE FIRST*/
 
 .list-share-container {
@@ -18,15 +17,17 @@
 .list-title {
     grid-area: listTitle;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: transparent;
+    color: var(--primary-color);
     padding: 1rem;
     border-radius: 10px;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .list-event {
     grid-area: listEvent;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     border-radius: 10px;
     width: max-content;
@@ -35,7 +36,7 @@
 .list-date {
     grid-area: listDate;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     border-radius: 10px;
     width: max-content;
@@ -44,7 +45,7 @@
 .list-description {
     grid-area: listDescription;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     text-align: justify;
     border-radius: 10px;
@@ -71,7 +72,7 @@
     height: 14rem;
     border-radius: 10px;
     margin: 0 1rem 2rem 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
 }
 
 div.article {
@@ -131,13 +132,13 @@ div.article div a {
 .seeMore-button>p {
     font-size: 1rem;
     text-align: center;
-    background-color: var(--color-4);
+    background-color: var(--btn-color);
     border-radius: 10px;
     width: 50%;
     margin: 0;
     padding: 0.2rem;
     align-self: center;
-    color: var(--color-2);
+    color: var(--primary-color);
 }
 
 .delete-button {
@@ -194,7 +195,6 @@ div.article div a {
     border-radius: 11px;
 }
 
-
 /*END OF MOBILE FIRST*/
 
 
@@ -222,6 +222,7 @@ div.article div a {
         margin: 0;
         padding: 0.5rem 2rem 0.5rem 2rem;
         text-align: center;
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
     }
     .list-event {
         grid-area: listEvent;
@@ -266,7 +267,7 @@ div.article div a {
         height: 15rem;
         border-radius: 10px;
         margin-bottom: 2rem;
-        background-color: var(--color-2);
+        background-color: var(--background-color);
     }
     .article-img {
         grid-area: articlePicture;
@@ -306,7 +307,7 @@ div.article div a {
     .seeMore-button>p {
         font-size: 1rem;
         text-align: center;
-        background-color: var(--color-4);
+        background-color: var(--btn-color);
         border-radius: 10px;
         width: 50%;
         margin: 0;
