--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -4,15 +4,16 @@
     z-index: -1;
 }
 
-
 /*MOBILE FIRST*/
 
 .login-title {
     margin: 1rem;
-    background-color: var(--background-color);
+    background-color: transparent;
+    color: var(--primary-color);
     padding: 1rem;
     border-radius: 10px;
     text-align: center;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .form-container {
@@ -27,7 +28,7 @@
     text-align: center;
 }
 
-.user {
+.email {
     text-align: center;
     color: var(--primary-color);
 }
@@ -37,8 +38,7 @@
     color: var(--primary-color);
 }
 
-input[type=text],
-input[type=password] {
+input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -50,13 +50,13 @@ input[type=password] {
 
 input[type=submit] {
     background-color: var(--btn-color);
-    color: white;
-    font-size: 15px;
+    color: var(--primary-color);
+    font-size: 20px;
     padding: 14px 20px;
     border: none;
     cursor: pointer;
     margin: 1rem 5rem 1rem 5rem;
-    width: 15rem;
+    width: 13rem;
     border-radius: 11px;
     border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
@@ -70,18 +70,31 @@ input[type=submit]:hover {
 
 .noaccount {
     background-color: var(--btn-color);
-    width: 12rem;
+    width: 13rem;
     margin: auto;
     border-radius: 11px;
     border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
     text-align: center;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+
+.noaccount:hover {
+    background-color: var(--background-color);
+    color: var(--btn-color);
+    border: 1px solid var(--btn-color);
 }
 
 .noaccount-href {
     color: var(--primary-color);
     text-decoration: none;
-    font-size: 16px;
+    padding: 1rem;
+}
+
+.noaccount-href:hover {
+    color: var(--btn-color);
+    text-decoration: none;
 }
 
 .show-password {
@@ -103,23 +116,27 @@ input[type=submit]:hover {
         background-color: transparent;
         color: var(--primary-color);
         font-size: 40px;
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
     }
+
     .form {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 20rem;
     }
+
     .email {
         text-align: center;
         color: var(--primary-color);
     }
+
     .password {
         text-align: center;
         color: var(--primary-color);
     }
-    input[type=text],
-    input[type=password] {
+
+    input[type=text], input[type=password] {
         width: 100%;
         padding: 12px 20px;
         border: 1px solid #ccc;
@@ -127,6 +144,7 @@ input[type=submit]:hover {
         border-radius: 11px;
         text-align: center;
     }
+
     input[type=submit] {
         background-color: var(--btn-color);
         color: var(--primary-color);
@@ -140,20 +158,43 @@ input[type=submit]:hover {
         box-shadow: 2px 2px 4px black;
         border: solid black 0.5px;
     }
+
     input[type=submit]:hover {
-        background-color: white;
+        background-color: var(--background-color);
         color: var(--btn-color);
         border: 1px solid var(--btn-color);
     }
+
     .noaccount {
-        display: flex;
-        justify-content: center;
+        background-color: var(--btn-color);
+        width: 10rem;
+        margin: auto;
+        border-radius: 11px;
+        border: solid black 0.5px;
+        box-shadow: 2px 2px 4px black;
+        text-align: center;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
+    
+    .noaccount:hover {
+        background-color: var(--background-color);
+        color: var(--btn-color);
+        border: 1px solid var(--btn-color);
+    }
+    
     .noaccount-href {
         color: var(--primary-color);
         text-decoration: none;
         font-size: 16px;
+        font-weight: bold;
     }
+    
+    .noaccount-href:hover {
+        color: var(--btn-color);
+        text-decoration: none;
+    }
+
     .show-password {
         color: var(--background-color);
         font-size: 15px;
