--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -6,7 +6,7 @@
 
 .noaccount {
     text-align: center;
-    background: #E5383B;
+    background: var(--btn-color);
     width: 150px;
     margin: auto;
     border-radius: 11px;
@@ -16,7 +16,7 @@
 
 .noaccount a {
     text-decoration: none;
-    color: white;
+    color: var(--primary-color);
     font-size: smaller;
 }
 
@@ -35,19 +35,19 @@
 
 .card-header {
     height: 20px;
-    background: #007EA7;
+    background: var(--card-color);
 }
 
 .card-footer {
     height: 20px;
-    background: #007EA7;
+    background: var(--card-color);
 }
 
 .in_card {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: snow;
+    background-color: var(--background-color);
     opacity: 0.85;
     width: 100%;
     height: 15rem;
@@ -98,19 +98,19 @@ div.card div div {
 
 h1 {
     text-align: center;
-    color: white;
+    color: var(--primary-color);
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 h2 {
     text-align: center;
-    color: white;
+    color: var(--primary-color);
     text-shadow: 1px 1px 4px rgb(0, 0, 0);
 }
 
 h3 {
     text-align: center;
-    color: white;
+    color: var(--primary-color);
 }
 
 .sign_up {
@@ -118,15 +118,15 @@ h3 {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    color: white;
-    background-color: #E5383B;
+    color: var(--primary-color);
+    background-color: var(--btn-color);
     border-radius: 11px;
     border: none;
 }
 
 div.cards div div a {
     text-decoration: none;
-    color: white;
+    color: var(--primary-color);
 }
 
 @media screen and (min-width: 600px) {
@@ -142,7 +142,7 @@ div.cards div div a {
         margin-top: 20px;
         flex-grow: 1;
         box-shadow: 5px 5px 8px rgb(0, 0, 0);
-        background: white;
+        background: var(--background-color);
         opacity: 0.8;
     }
 }
