--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -15,24 +15,23 @@
 		<h1 class='titre'>Give me Gifts !</h1>
 		<div class="container-card">
 			<div class="card">
-				<img class="image-card" src="/assets/images/pexels-laura.jpg">
-				<h3>Comment ça fonctionne?
-				</h3>
-				<p class="paragraphe">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ?
-					<br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
-                <a class="button"></a>    
-			</div>
-			<div class="card">
-				<img class="image-card" src="/assets/images/pexels-karolina2.jpg">
+				<img class="image-card" src="/assets/images/list_share_bg.jpg">
 				<h3>Gift Me 5</h3>
 				<p class="paragraphe">Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>				
-                <a class="button" href="/login">Se connecter !</a>
+                <a class="button" href="/login">Se connecter</a>
+			</div>
+			<div class="card">
+				<img class="image-card" src="/assets/images/pexels-laura.jpg">
+				<h3>Comment ça fonctionne?</h3>
+				<p class="paragraphe">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ?
+				<br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
+                <a class="button" href="/list">Exemples</a>
 			</div>
 			<div class="card">
 				<img class="image-card" src="/assets/images/pexels-szabo.jpg">
 				<h3>Youtube</h3>
 				<p class="paragraphe">Vous pouvez retrouver une vidéo explicative du site Give me Gifts</p>
-				<a class="button" href="http://www.youtube.com">allez à</a>
+				<a class="button" href="http://www.youtube.com">Regarder</a>
 			</div>		
 	</div>
 {% endblock %}
