--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -1,8 +1,7 @@
 .main-background {
     background-image: url("/assets/images/login_bg.jpg");
     background-size: cover;
-    z-index: -1;
-    position: absolute;
+    position: fixed;
 }
 
 /*MOBILE FIRST*/
