add routes for list/user ans list/user/lists

--- a/src/View/List/lists.html.twig
+++ b/src/View/List/lists.html.twig
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-  {% include 'Components/_user-list.html.twig' %}
+  {% include 'Components/_user-lists.html.twig' %}
 {% endblock %}
