--- a/public/assets/css/items_add.css
+++ b/public/assets/css/items_add.css
@@ -7,12 +7,20 @@
 
 /*MOBILE FIRST*/
 
+.presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
 .list-share-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 5rem 1fr 1fr auto 1fr auto 2rem;
     grid-template-areas: "navbar navbar navbar" "listTitle listTitle listTitle" "listEvent . listDate" "listDescription listDescription listDescription" ". . sortArticle" "articleContainer articleContainer articleContainer" ". . .";
     justify-items: center;
+    color: black;
 }
 
 .list-title {
@@ -48,6 +56,27 @@
     padding: 1rem;
     text-align: justify;
     border-radius: 10px;
+}
+
+.add-form>h1 {
+    margin: auto;
+    color: white;
+}
+
+#submit {
+    width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--btn-color);
+    border-radius: 11px;
+    color: white;
+    font-size: initial;
+}
+
+.add-form {
+    margin: auto;
+    color: white;
+    font-weight: 400;
 }
 
 .list-sort {
@@ -168,30 +197,35 @@ div.article div a {
     width: 20rem;
     height: 1.5rem;
     border-radius: 11px;
+    text-align: center;
 }
 
 #price {
     width: 20rem;
     height: 1.5rem;
     border-radius: 11px;
+    text-align: center;
 }
 
 #imgLink {
     width: 20rem;
     height: 1.5rem;
     border-radius: 11px;
+    text-align: center;
 }
 
 #giftLink {
     width: 20rem;
     height: 1.5rem;
     border-radius: 11px;
+    text-align: center;
 }
 
 #description {
     width: 20rem;
     height: 1.5rem;
     border-radius: 11px;
+    text-align: center;
 }
 
 
@@ -201,6 +235,10 @@ div.article div a {
 /*DESKTOP FIRST*/
 
 @media only screen and (min-width: 900px) {
+    .page {
+        display: flex;
+        flex-direction: row;
+    }
     .main-background {
         background-image: url("/assets/images/add_list.jpg");
         background-size: cover;
@@ -327,6 +365,12 @@ div.article div a {
         margin: 0;
         font-size: 1.7rem;
         font-weight: bold;
+    }
+    .list-share-container {
+        grid-template-rows: 2rem 3rem repeat(9, auto) 2rem;
+    }
+    .add-form {
+        margin-top: 2rem;
     }
     /*END OF DESKTOP FIRST*/
 }
