--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -3,26 +3,22 @@
 rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Top Navigation Menu -->
 <div class="topnav">
-
+	
 	<a class="logoDesktop" href="/" title="Home"><img src="/assets/images/logo.png" alt="Logo"/></a>
 	<!-- Navigation links (hidden by default) -->
 	<div id="myLinks">
 		<a href="/">Accueil</a>
 		<a href="/list">Listes</a>
 
-		{% if session is null %}
+		{% if  user is null   %}
 				
-			<a href="/login">Connexion</a>	
+			<a href="/login">Connexion</a>
 		
 		{% else %}
-		    
+		   		    
 			<a href="/logout">Se déconnecter</a>
 					    
-		{% endif %}
-
-
-
-
+		{% endif %} #}
 			
 	</div>
 	<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
