--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,6 +1,9 @@
 .main-background {
     background-image: url("/assets/images/login_bg.jpg");
+    position: absolute;
+    z-index: -1;
 }
+
 
 /*MOBILE FIRST*/
 
@@ -20,6 +23,10 @@
     margin-right: 5vh;
 }
 
+.login-container {
+    text-align: center;
+}
+
 .user {
     text-align: center;
     color: var(--primary-color);
@@ -30,7 +37,8 @@
     color: var(--primary-color);
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
     width: 100%;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -45,17 +53,14 @@ input[type=submit] {
     color: white;
     font-size: 15px;
     padding: 14px 20px;
-    margin: 15px 0;
-
-    margin-left: 5rem;
     border: none;
     cursor: pointer;
+    margin: 1rem 5rem 1rem 5rem;
     width: 15rem;
     border-radius: 11px;
     border: solid black 0.5px;
-    box-shadow: 2px 2px 4px black ;
+    box-shadow: 2px 2px 4px black;
 }
-
 
 input[type=submit]:hover {
     background-color: var(--background-color);
@@ -63,65 +68,58 @@ input[type=submit]:hover {
     border: 1px solid var(--btn-color);
 }
 
-
 .noaccount {
     background-color: var(--btn-color);
     width: 12rem;
     margin: auto;
     border-radius: 11px;
     border: solid black 0.5px;
-    box-shadow: 2px 2px 4px black ;
+    box-shadow: 2px 2px 4px black;
     text-align: center;
 }
 
 .noaccount-href {
-
     color: var(--primary-color);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
 }
-
 
 .show-password {
-
     color: var(--background-color);
     font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+
 /*END OF MOBILE FIRST*/
 
+
 /*DESKTOP FIRST*/
+
 @media only screen and (min-width: 920px) {
-
-
     .login-title {
         text-align: center;
         background-color: transparent;
         color: var(--primary-color);
         font-size: 40px;
     }
-
-
     .form {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 20rem;
-
     }
-
-    .user {
+    .email {
         text-align: center;
         color: var(--primary-color);
     }
-
     .password {
         text-align: center;
         color: var(--primary-color);
     }
-
-
-
-    input[type=text], input[type=password] {
+    input[type=text],
+    input[type=password] {
         width: 100%;
         padding: 12px 20px;
         border: 1px solid #ccc;
@@ -129,8 +127,6 @@ input[type=submit]:hover {
         border-radius: 11px;
         text-align: center;
     }
-
-
     input[type=submit] {
         background-color: var(--btn-color);
         color: var(--primary-color);
@@ -141,38 +137,27 @@ input[type=submit]:hover {
         cursor: pointer;
         width: 10rem;
         border-radius: 11px;
-        box-shadow: 2px 2px 4px black ;
+        box-shadow: 2px 2px 4px black;
         border: solid black 0.5px;
     }
-
     input[type=submit]:hover {
         background-color: white;
         color: var(--btn-color);
         border: 1px solid var(--btn-color);
     }
-
-
     .noaccount {
-        background-color: var(--btn-color);
-        width: 10rem;
-        margin: auto;
-        border-radius: 11px;
-        border: solid black 0.5px;
-        box-shadow: 2px 2px 4px black ;
+        display: flex;
+        justify-content: center;
     }
-    
     .noaccount-href {
-
         color: var(--primary-color);
         text-decoration: none;
-        font-size: 20px;
+        font-size: 16px;
     }
-
     .show-password {
         color: var(--background-color);
         font-size: 15px;
         margin-top: 1rem;
         text-shadow: black 2px 2px;
     }
-} 
-
+}
