--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,45 +1,83 @@
+.main-background {
+    background-image: url("/assets/images/pexels-lucie2.jpg");
+    background-size: cover;
+    position: fixed;
+}
+
+a {
+    margin-bottom: inherit;
+    text-decoration: none;
+}
+
+h3 {
+    text-align: center;
+    font-weight: 900;
+    font-size: 1, 5rem;
+}
+
+.titre {
+    text-align: center;
+    background-color: transparent;
+    color: var(--primary-color);
+}
+
+.paragraphe {
+    margin: 0;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.image-card {
+    height: 15rem;
+    width: 100%;
+    border-top-left-radius: 11px;
+    border-top-right-radius: 11px;
+}
+
 .container-card {
     display: flex;
     flex-direction: column;
     margin: 2px;
-    gap: 20px;
-    background-color: white;
-    border-radius: 11px;
+    gap: 1rem;
+    height: 50rem;
 }
 
-body {
-    background-color:cadetblue;
-}
-
-h3 {
-    text-align: center;  
-}
-
-.container-list {
-   box-shadow: 0 2px 5px;
-   margin: 2px;
-   border-radius: 11px; 
-}
-
-h1 {
-    text-align: center;
-}
-
-.container-sign_up {
-    box-shadow: 0 2px 5px;
+.card {
+    margin-right: auto;
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    background: white;
     border-radius: 11px;
+    text-align: center;
+    text-decoration: none;
 }
 
-.container-youtube {
-    box-shadow: 0 2px 5px;
-    background-color: white;
+.button {
+    width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--btn-color);
     border-radius: 11px;
+    color: white;
 }
 
-.image-card {
-    height: auto;
-    width: 100%;
-    border-radius: 11px;
+@media screen and (min-width: 700px) {
+    .container-card {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .main-background {
+        background-image: url("/assets/images/pexels-lucie.jpg");
+        background-size: cover;
+        position: fixed;
+    }
+    .card {
+        width: 30rem;
+        height: 35rem;
+    }
 }
