--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -3,12 +3,14 @@
 rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Top Navigation Menu -->
 <div class="topnav">
+
 	<a class="logoDesktop" href="/" title="Home"><img src="/assets/images/logo.png" alt="Logo"/></a>
 	<!-- Navigation links (hidden by default) -->
 	<div id="myLinks">
 		<a href="/">Accueil</a>
 		<a href="/list">Listes</a>
 		<a href="/login">Se connecter</a>
+		<a href="/logout">Se déconnecter</a>
 	</div>
 	<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
