--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,6 +1,5 @@
 .main-background {
     background-image: url("/assets/images/pexels-lucie2.jpg");
-    background-size: cover;
     position: fixed;
 }
 
@@ -12,19 +11,20 @@ a {
 h3 {
     text-align: center;
     font-weight: 900;
-    font-size: 1, 5rem;
+    font-size: 18px;
 }
 
 .titre {
     text-align: center;
     background-color: transparent;
     color: var(--primary-color);
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .paragraphe {
     margin: 0;
-    padding: 1rem;
-    font-size: 1rem;
+    font-size: 14px;
+    padding: 0 1rem 1rem 1rem;
 }
 
 .image-card {
@@ -38,8 +38,8 @@ h3 {
     display: flex;
     flex-direction: column;
     margin: 2px;
-    gap: 1rem;
-    height: 50rem;
+    gap: 2rem;
+    height: 170rem;
 }
 
 .card {
@@ -50,7 +50,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: white;
+    background: var(--background-color);
     border-radius: 11px;
     text-align: center;
     text-decoration: none;
@@ -58,11 +58,16 @@ h3 {
 
 .button {
     width: 10rem;
+    margin-bottom: 1rem;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--btn-color);
     border-radius: 11px;
-    color: white;
+    color: var(--primary-color);
+    font-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 700px) {
@@ -73,11 +78,16 @@ h3 {
     }
     .main-background {
         background-image: url("/assets/images/pexels-lucie.jpg");
-        background-size: cover;
-        position: fixed;
+        position: absolute;
+        z-index: -1;
     }
     .card {
-        width: 30rem;
-        height: 35rem;
+        width: 20rem;
+        height: 25rem;
+    }
+
+    * {
+        overflow-y: hidden;
+        overflow-x: hidden;
     }
 }
