--- a/public/assets/css/items_add.css
+++ b/public/assets/css/items_add.css
@@ -4,7 +4,6 @@
     position: fixed;
 }
 
-
 /*MOBILE FIRST*/
 
 .presentation {
@@ -26,15 +25,17 @@
 .list-title {
     grid-area: listTitle;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: transparent;
+    color: var(--primary-color);
     padding: 1rem;
     border-radius: 10px;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .list-event {
     grid-area: listEvent;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     border-radius: 10px;
     width: max-content;
@@ -43,7 +44,7 @@
 .list-date {
     grid-area: listDate;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     border-radius: 10px;
     width: max-content;
@@ -52,7 +53,7 @@
 .list-description {
     grid-area: listDescription;
     margin: 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
     padding: 1rem;
     text-align: justify;
     border-radius: 10px;
@@ -100,7 +101,7 @@
     height: 14rem;
     border-radius: 10px;
     margin: 0 1rem 2rem 1rem;
-    background-color: var(--color-2);
+    background-color: var(--background-color);
 }
 
 div.article {
@@ -160,13 +161,13 @@ div.article div a {
 .seeMore-button>p {
     font-size: 1rem;
     text-align: center;
-    background-color: var(--color-4);
+    background-color: var(--btn-color);
     border-radius: 10px;
     width: 50%;
     margin: 0;
     padding: 0.2rem;
     align-self: center;
-    color: var(--color-2);
+    color: var(--primary-color);
 }
 
 .delete-button {
@@ -228,7 +229,6 @@ div.article div a {
     text-align: center;
 }
 
-
 /*END OF MOBILE FIRST*/
 
 
@@ -260,6 +260,7 @@ div.article div a {
         margin: 0;
         padding: 0.5rem 2rem 0.5rem 2rem;
         text-align: center;
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
     }
     .list-event {
         grid-area: listEvent;
@@ -304,7 +305,7 @@ div.article div a {
         height: 15rem;
         border-radius: 10px;
         margin-bottom: 2rem;
-        background-color: var(--color-2);
+        background-color: var(--background-color);
     }
     .article-img {
         grid-area: articlePicture;
@@ -344,7 +345,7 @@ div.article div a {
     .seeMore-button>p {
         font-size: 1rem;
         text-align: center;
-        background-color: var(--color-4);
+        background-color: var(--btn-color);
         border-radius: 10px;
         width: 50%;
         margin: 0;
