--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -1,19 +1,19 @@
 .main-background {
     background-image: url("/assets/images/login_bg.jpg");
     background-size: cover;
-    z-index: -1;
-    position: absolute;
+    position: fixed;
 }
-
 
 /*MOBILE FIRST*/
 
 .signup-title {
     margin: 1rem;
-    background-color: var(--background-color);
+    background-color: transparent;
+    color: var(--primary-color);
     padding: 1rem;
     border-radius: 11px;
     text-align: center;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .firstname {
@@ -61,9 +61,7 @@
     margin-left: 1rem;
 }
 
-input[type=date],
-input[type=email],
-input[type=password] {
+input[type=date], input[type=email], input[type=password] {
     width: 21rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -120,6 +118,7 @@ input[type=submit]:hover {
         background-color: transparent;
         color: var(--primary-color);
         font-size: 40px;
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
     }
     .firstname {
         color: var(--primary-color);
@@ -161,9 +160,7 @@ input[type=submit]:hover {
         width: 100%;
         margin: auto;
     }
-    input[type=date],
-    input[type=email],
-    input[type=password] {
+    input[type=date], input[type=email], input[type=password] {
         width: 30rem;
         padding: 12px 20px;
         border: 1px solid #ccc;
