modif routes untill list/user/lists/addlist + modif css

--- a/src/View/List/lists.html.twig
+++ b/src/View/List/lists.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block stylesheet %}
   <link rel="stylesheet" href="/assets/css/navbar.css" />
-  <link rel="stylesheet" href="/assets/css/user.css" />
+  <link rel="stylesheet" href="/assets/css/user-lists.css" />
 {% endblock %}
 
 {% block content %}
