--- a/public/assets/css/user-lists.css
+++ b/public/assets/css/user-lists.css
@@ -4,96 +4,10 @@
     position: fixed;
 }
 
-.noaccount {
-    text-align: center;
-    background: var(--btn-color);
-    width: 150px;
-    margin: auto;
-    border-radius: 11px;
-    border: solid black 0.5px;
-    box-shadow: 2px 2px 4px rgb(0, 0, 0);
-}
-
-.noaccount a {
-    text-decoration: none;
-    color: var(--primary-color);
-    font-size: smaller;
-}
-
-.Ajouter {
-    width: 100%;
-    height: 100%;
-}
-
-.cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 2rem;
-    margin: 0px;
-}
-
-.card-header {
-    height: 20px;
-    background: var(--card-color);
-}
-
-.card-footer {
-    height: 20px;
-    background: var(--card-color);
-}
-
-.in_card {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: var(--background-color);
-    opacity: 0.85;
-    width: 100%;
-    height: 15rem;
-}
-
-.in_card a {
-    width: 2rem;
-    height: 2rem;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.in_card a img {
-    width: 2rem;
-    height: 2rem;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.card {
-    border-radius: 11px;
-}
-
-.card-header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.card-footer {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-div.card div div {
-    margin: auto;
-}
-
-div.card div div {
-    margin: auto;
+p,
+a {
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -102,47 +16,107 @@ h1 {
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
-h2 {
+.cards {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 2rem;
+    height: auto;
+    padding-bottom: 3rem;
+}
+
+.card {
+    border-radius: 10px;
+    width: calc(100% - 2rem);
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.card-header {
+    height: fit-content;
+    padding: 0.5rem;
     text-align: center;
+    background-color: var(--card-color);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     color: var(--primary-color);
-    text-shadow: 1px 1px 4px rgb(0, 0, 0);
 }
 
-h3 {
+.in-card {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background-color);
+    opacity: 0.9;
+}
+
+.in-card .card-body p {
+    font-size: 1rem;
+}
+
+.card-title {
+    font-weight: bold;
     text-align: center;
-    color: var(--primary-color);
 }
 
-.sign_up {
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    color: var(--primary-color);
-    background-color: var(--btn-color);
-    border-radius: 11px;
-    border: none;
+.card-date {
+    font-style: italic;
+    text-align: center;
 }
 
-div.cards div div a {
-    text-decoration: none;
-    color: var(--primary-color);
+.card-description {
+    text-align: justify;
 }
 
-@media screen and (min-width: 600px) {
+.in-card .card-body {
+    width: 60%;
+    padding: 0.5rem;
+}
+
+.in-card .gift-list {
+    width: calc(100% - 60%);
+    padding:0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.in-card .gift-list p {
+    font-size: 1rem;
+    align-self: center;
+    background-color: var(--card-color);
+    padding: 0.5rem;
+    border-radius: 10px;
+    color: var(--primary-color);;
+}
+
+.in-card-add {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: var(--background-color);
+    opacity: 0.9;
+    padding: 0.5rem;
+}
+
+.in-card-add a img {
+    height: 3rem;
+    width: 3rem;
+}
+
+@media screen and (min-width: 1200px) {
     .main-background {
         background-image: url("/assets/images/add_list.jpg");
     }
+
     .cards {
         flex-direction: row;
-        margin-top: 5rem;
-        margin: 0 2rem;
+        flex-wrap: wrap;
+        justify-content: center;
     }
+
     .card {
-        margin-top: 20px;
-        flex-grow: 1;
         box-shadow: 5px 5px 8px rgb(0, 0, 0);
         background: var(--background-color);
-        opacity: 0.8;
+        width: calc((100%/3) - 5rem) ;
     }
 }
