--- a/src/View/Components/_user-lists.html.twig
+++ b/src/View/Components/_user-lists.html.twig
@@ -5,29 +5,25 @@
 <div class="cards">
     {% for list in lists %}
         <div class="card">
-            <div class="card-header"></div>
-            <div class="in_card">
+            <div class="card-header">{{ list[0]['ename'] }}</div>
+            <div class="in-card">
                 <div class="card-body">
                     <p class="card-title">{{ list[0]['lname'] }}</p>
-                    <p class="card-event">{{ list[0]['ename'] }}</p>
                     <p class="card-date">{{ list[0]['limit_date'] }}</p>
                     <p class="card-description">{{ list[0]['ldescription'] }}</p>
                 </div>
-                <div class="liste cadeaux">
-                    {% for gift in list %}
-                        <p>{{ gift['aname'] }}</p>
+                <div class="gift-list">
+                    {% for i in 0..3 %}
+                        <p>{{ list[i]['aname'] }}</p>
                     {% endfor %}
                 </div>
-            </div>
-            <div class="card-footer">
-                <a href="/items/add">voir</a>
             </div>
         </div>
     {% endfor %}
     <div class="card">
-        <div class="card-header"></div>
-        <div class="in_card">
-            <a href="/list/add" title="Ajout"><img src="/assets/images/icone_ajout.png" alt="icone_ajout"/></a>
+        <div class="card-header">Créer une liste</div>
+        <div class="in-card-add">
+            <a href="/list/user/lists/addList" title="Ajout"><img src="/assets/images/icone_ajout.png" alt="icone_ajout"/></a>
         </div>
         <div class="card-footer"></div>
     </div>
